--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@
   font-family: "Lexend Deca", sans-serif;
   font-weight: 600;
   color: rgba(100, 100, 100, 1);
+  box-sizing: border-box;
 }
 :root{
   font-size: 10px;
   color: black;
 }
-@keyframes slide {
+@keyframes moving {
   0%{
     transform: translateX(0);
   }
@@ -68,13 +69,19 @@ header{
 .navLinks a{
   font-size: 2rem;
   position: relative;
+  cursor: pointer;
 }
 .navLinks a::before{
   content: "";
   position: absolute;
   bottom: -2.5px;
+  height: 2.5px;
+  border-radius: 10px;
   width: 0;
   background-color: rgba(52, 46, 173, 1) ;
+}
+.navLinks a:hover::before{
+  width: 100%;
 }
 .hireBtn{
   background-color: rgba(52, 46, 173, 1);
@@ -82,6 +89,7 @@ header{
   padding: 10px;
   border-radius: 15px;
   font-weight: 600;
+  cursor: pointer;
 }
 .hireBtn a{
   color: white;
@@ -125,7 +133,6 @@ overflow: hidden;
 .greet{
   font-family: "Jost", sans-serif;
   font-weight: 600;
-  color: rgba(181, 181, 181, 1);
   font-size: 2.5rem;
 }
 .myName{
@@ -139,14 +146,25 @@ overflow: hidden;
   -webkit-text-stroke-width: 1px;
   color: rgba(52, 46, 173, 1);;
 }
-.myJob{
+.typewriter {
+  position: relative;
   font-size: 3.3rem;
+  height: 35px;
+  margin-bottom: 10px;
+}
+.typewriter::before {
+  content: "";
+  height: 35px;
+  width: 5px;
+  position: absolute;
+  top: 50%;
+  right: -10px;
 }
 .mySocials ul li{
   display: flex;
   gap: 25px;
 }
-.mySocials ul li i{
+.mySocials ul li a i{
   color: rgba(52, 46, 173, 1);
   font-size: 3.3rem;
 }
@@ -184,8 +202,8 @@ overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 350px;
-  height: 120vh;
-  padding-bottom: 25px;
+  height: 150vh;
+  padding-bottom: 50px;
   }
   .navLinks{
     padding: auto;
@@ -202,6 +220,7 @@ overflow: hidden;
   }
   #menuBtn{
     display: block;
+    cursor: pointer;
   }
   .navLinks ul{
     flex-direction: column;
@@ -220,7 +239,16 @@ overflow: hidden;
 
 
 /* about section */
-
+.me{
+display: flex;
+height: 100vh;
+width: 100%;
+justify-content: space-between;
+}
+.me img{
+  width: 40%;
+  height: 100%;
+}
 .about{
   display: grid;
   grid-template-columns: 35% 50%;
@@ -235,7 +263,6 @@ overflow: hidden;
 }
 .aboutme{
   font-family: "Jost", sans-serif;
-  color: rgba(181, 181, 181, 1);
   font-weight: 600;
   font-size: 2rem;
 }
@@ -265,6 +292,7 @@ overflow: hidden;
   margin-top: 20px;
   width: 100px;
   z-index: 1;
+  cursor: pointer;
 }
 .aboutRight{
   display: flex;
@@ -278,7 +306,7 @@ overflow: hidden;
  height: 200px;
  width: 100%;
  background-color: whitesmoke;
- box-shadow: 5px 5px 5px rgba(181, 181, 181, 1);
+ box-shadow: 5px 5px 5px  rgba(100, 100, 100, 1);
  border-radius: 25px;
  padding: 10px;
  z-index: 1;
@@ -340,6 +368,15 @@ color: white;
 }
 
 @media  screen and (max-width:1200px) {
+  .me{
+    flex-direction: column;
+    gap: 50px;
+    height: auto;
+  }
+  .me img{
+    width: 100%;
+    z-index: 5;
+  }
   .about{
     display: flex;
     flex-direction: column;
@@ -367,7 +404,6 @@ color: white;
 
 .portfolioTitle{
   font-size: 2rem;
-  color: rgba(181, 181, 181, 1);
 }
 .portfolioWork{
   height: 500px;
@@ -469,7 +505,7 @@ padding-left: 25px;
   height: 200px;
   width: 300px;
 }
-.stat p{
+.stat div p{
   font-size: 2rem;
 }
 .upperStatBox{
@@ -563,7 +599,10 @@ padding-left: 25px;
   }
   .stat{
     bottom: -50px;
-    width: 90px;
+    width: 85px;
+  }
+  .stat div p{
+    font-size: 1.5rem;
   }
   .testimonials .colorBlue{
     font-size: 3.3rem;
@@ -574,6 +613,12 @@ padding-left: 25px;
   .testimonialText{
     font-size: 3.3rem;
   }
+  .comment{
+    font-size: 1.2rem;
+  }
+  .clientTestimonial{
+    width: 300px;
+  }
 }
 
 
@@ -581,6 +626,7 @@ padding-left: 25px;
 .allClients{
   display: flex;
   flex-direction: column;
+  background-image: url('./img/background.png');
 }
 .clientHeading{
   display: flex;
@@ -606,7 +652,7 @@ padding-left: 25px;
   white-space: nowrap;
   display: flex;
   gap: 25px;
-  animation: slide 10s linear infinite;
+  animation: moving 10s linear infinite;
   padding: 10px;
 }
 .allClientsBanner img{
@@ -629,8 +675,23 @@ padding-left: 25px;
     font-size: 3.3rem;
   }
 }
-
 /* footer section */
 footer{
-  background-image: url(./img/);
+  background-image: url("./img/footerBackground.png");
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+footer ul li{
+  display: flex;
+  gap: 25px;
+}
+footer ul li a i{
+  font-size: 3rem;
+  color: white
+}
+.copyright{
+  font-size: 1.5rem;
 }
