--- a/style.css
+++ b/style.css
@@ -627,6 +627,8 @@ padding-left: 25px;
   display: flex;
   flex-direction: column;
   background-image: url('./img/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .clientHeading{
   display: flex;
