--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section{
   width: 100%;
   position: relative;
 }
-.topBlue_#fffLine{
+.topBlue_whiteLine{
   background-color: #fff;
   height: 5px;
   width: 100%;
